# hashi

./: .gitignore  README.md  install_dnsmasq.sh
.vscode-workspaces/: allin1_dev.code-workspace  example-fastapi-db.code-workspace  vault-dev.code-workspace
consul/: generate_encrypt_key.sh  install_cni_plugins.sh
consul/conf_files/etc_consul/: consul.hcl  hashiup_consul.hcl  server.hcl
consul/conf_files/systemd/: consul.service  hashiup_consul.service
dnsmasq/: 10-consul
nomad/acl_policies/: dev.policy
nomad/conf_files/etc_nomad/: client.hcl  hashiup_nomad.hcl  nomad.hcl
nomad/conf_files/systemd/: hashiup_nomad.service
nomad/job_files/: http-echo.nomad  pgadmin.nomad  registry.nomad  traefik.nomad  whoami-demo.nomad
nomad/job_files/containers/example-fastapi-db/apps/backend/: Dockerfile  build_img.sh  pyproject.toml
nomad/job_files/containers/example-fastapi-db/apps/backend/app/: main.py
nomad/job_files/containers/example-fastapi-db/apps/backend/app/core/: config.py  database.py  logger.py
nomad/job_files/containers/example-fastapi-db/apps/backend/app/core/models/: db_connection_models.py
nomad/job_files/containers/example-fastapi-db/apps/backend/app/src/: dependencies.py
nomad/job_files/containers/example-fastapi-db/apps/backend/app/src/routers/example_db/: potato_router.py
nomad/job_files/download_suite/: README.md  download-suite.nomad  jackett.nomad  radarr.nomad
scripts/: hashi-full-teardown.sh  install-hashiup.sh  install_cni_plugins.sh  install_with_hashiup.sh
vault/policy_files/: example-learn-ui-api  example-vault-policy
(+22 files in other folders)
